# ScratchBird-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint-type-package.yml  validate-capability-matrix.yml  validate-evidence-gates.yml
artifacts/: README.md
artifacts/ai_conformance/: README.md
docs/: README.md
docs/guides/: GETTING_STARTED_EARLY_BETA.md  README.md
docs/planning/: AI_INTERFACE_IMPLEMENTATION_BACKLOG.md  AI_INTERFACE_SPEC_EXPANSION_BACKLOG.md  PHASED_IMPLEMENTATION_BACKLOG.md  README.md
docs/reference/: AI_DATABASE_TOOLING_REPORT_2026-02-18.md  README.md
docs/releases/: EARLY_BETA_CONFORMANCE_GATES.md  INITIAL_EARLY_BETA_RELEASE_2026-02-18.md  README.md
docs/specifications/: README.md
docs/status/: EARLY_BETA_KNOWN_GAPS_2026-02-18.md  EARLY_BETA_KNOWN_GAPS_2026-03-07.md  EARLY_BETA_STATUS_2026-02-18.md  EARLY_BETA_STATUS_2026-03-07.md  (+1 more)
examples/: README.md  http-bridge.env.example
src/: README.md
tests/: test_audit_bundle.py  test_cluster_routing.py  test_compatibility.py  test_execution_mode.py  test_framework_adapters.py  test_http_adapters.py  test_http_bridge.py  test_http_service_integration.py  test_operation_streams.py  test_plan_introspection.py  test_policy.py  test_provider_profiles.py  test_remote_sessions.py  test_retrieval.py  test_router.py  test_service.py  test_settings.py  test_tool_schema.py  test_validate_evidence_gates.py
tools/: README.md  generate_ai_conformance_artifacts.py  run_local_bridge.sh  run_local_stack.sh  smoke_http_contract.py  validate_capability_matrix.py  validate_evidence_gates.py
(+97 files in other folders)
