[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchbird-ai"
version = "0.1.0"
description = "AI integration platform scaffolding for ScratchBird"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ScratchBird AI Team" }
]
dependencies = []

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0"
]

[project.scripts]
scratchbird-ai-mcp = "scratchbird_ai.mcp_server:main"
scratchbird-ai-http-bridge = "scratchbird_ai.http_bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
